# localsearchsolverpy

./: README.md  setup.cfg
examples/: knapsack.py  travellingsalesman.py
localsearchsolverpy/: __init__.py  commons.py  iterated_local_search.py  restarting_local_search.py
