[metadata]
name = localsearchsolverpy
version = 0.0.3
author = Florian Fontan
author_email = dev@florian-fontan.fr
description = A solver based on Local Search
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fontanf/localsearchsolverpy
project_urls =
    Bug Tracker = https://github.com/fontanf/localsearchsolverpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
python_requires = >=3.6
